# status_checker

./: Cargo.toml
src/: main.rs
src/lib/: clients.rs  mod.rs  monitor_actor.rs  request_handlers.rs  status_server.rs  websocket_actor.rs
static/: index.html  scripts.js
